# J-G-Trucking-and-Grading

./: README.md  api.js  index-3.html  index.html  land-clearing.html  styles.css  thank-you.html  wrangler.toml
ace/: .gitignore  CLAUDE.md  Cargo.toml  docker-compose.yml  go.work
ace/.github/workflows/: ci.yml
ace/deploy/helm/ace-platform/: Chart.yaml  values.yaml
ace/deploy/helm/ace-platform/charts/ace-asset-inventory/: Chart.yaml  values.yaml
ace/deploy/helm/ace-platform/charts/ace-asset-inventory/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
ace/deploy/helm/ace-platform/charts/ace-correlate/: Chart.yaml  values.yaml
ace/deploy/helm/ace-platform/charts/ace-correlate/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
ace/deploy/helm/ace-platform/charts/ace-deps/: Chart.yaml  values.yaml
ace/deploy/helm/ace-platform/charts/ace-deps/templates/: namespaces.yaml
ace/deploy/helm/ace-platform/charts/ace-ingest/: Chart.yaml  values.yaml
ace/deploy/helm/ace-platform/charts/ace-ingest/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
ace/deploy/helm/ace-platform/charts/ace-mitre-engine/: Chart.yaml  values.yaml
ace/deploy/helm/ace-platform/charts/ace-mitre-engine/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
ace/deploy/helm/ace-platform/charts/ace-normalize/: Chart.yaml  values.yaml
ace/deploy/helm/ace-platform/charts/ace-normalize/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
ace/deploy/helm/ace-platform/charts/ace-operator/: Chart.yaml  values.yaml
ace/deploy/helm/ace-platform/charts/ace-operator/crds/: ace.platform.io_ingestpipelines.yaml
ace/deploy/helm/ace-platform/charts/ace-operator/templates/: _helpers.tpl  crd.yaml  deployment.yaml  rbac.yaml
ace/deploy/helm/ace-platform/charts/ace-threat-intel/: Chart.yaml  values.yaml
ace/deploy/helm/ace-platform/charts/ace-threat-intel/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
ace/examples/: ingestpipeline-sample.yaml
ace/proto/: ace_cef.proto  buf.yaml
ace/proto/services/: ingest.proto  normalize.proto
ace/scripts/: build-all.sh  dev-setup.sh  init-db.sql
ace/services/ace-api-gateway/: Dockerfile  go.mod  go.sum
ace/services/ace-api-gateway/cmd/ace-api-gateway/: main.go
ace/services/ace-api-gateway/internal/alerts/: store.go
ace/services/ace-api-gateway/internal/config/: config.go
ace/services/ace-api-gateway/internal/gateway/: gateway.go
ace/services/ace-asset-inventory/: Dockerfile  go.mod
ace/services/ace-asset-inventory/cmd/ace-asset-inventory/: main.go
ace/services/ace-asset-inventory/internal/api/: http.go
ace/services/ace-asset-inventory/internal/config/: config.go
ace/services/ace-asset-inventory/internal/discovery/: passive.go
ace/services/ace-asset-inventory/internal/purdue/: classifier.go
ace/services/ace-asset-inventory/internal/store/: models.go  postgres.go
ace/services/ace-correlate/: Cargo.toml  Dockerfile  build.rs
ace/services/ace-correlate/src/: alert.rs  config.rs  error.rs  kafka.rs  main.rs  schema.rs  session.rs  window.rs
ace/services/ace-correlate/src/engine/: mod.rs  rule.rs  session.rs  window.rs
ace/services/ace-correlate/src/rules/: builtin.rs  loader.rs  mod.rs
ace/services/ace-dashboard/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts
ace/services/ace-dashboard/app/: globals.css  layout.tsx  page.tsx
ace/services/ace-dashboard/app/alerts/: page.tsx
ace/services/ace-dashboard/app/assets/: page.tsx
ace/services/ace-dashboard/app/mitre/: page.tsx
ace/services/ace-dashboard/app/threat-intel/: page.tsx
ace/services/ace-dashboard/components/: Nav.tsx  SeverityBadge.tsx  StatCard.tsx
ace/services/ace-dashboard/lib/: api.ts
ace/services/ace-ingest/: Cargo.toml  Dockerfile  build.rs
ace/services/ace-ingest/src/: config.rs  error.rs  health.rs  kafka.rs  main.rs
ace/services/ace-ingest/src/protocols/: cloudtrail.rs  k8s_audit.rs  mod.rs  modbus.rs  syslog.rs  wef.rs
ace/services/ace-mitre-engine/: Dockerfile  go.mod
ace/services/ace-mitre-engine/cmd/ace-mitre-engine/: main.go
ace/services/ace-mitre-engine/internal/api/: http.go
ace/services/ace-mitre-engine/internal/config/: config.go
ace/services/ace-mitre-engine/internal/heatmap/: heatmap.go
ace/services/ace-mitre-engine/internal/stix/: loader.go  types.go
ace/services/ace-mitre-engine/internal/store/: models.go  postgres.go
ace/services/ace-normalize/: Cargo.toml  Dockerfile  build.rs
ace/services/ace-normalize/src/: config.rs  enrichment.rs  error.rs  kafka.rs  main.rs  schema.rs
ace/services/ace-normalize/src/normalizers/: cloudtrail.rs  k8s_audit.rs  mod.rs  modbus.rs  syslog.rs  wef.rs
ace/services/ace-operator/: Dockerfile  go.mod  main.go
ace/services/ace-operator/api/v1alpha1/: groupversion_info.go  ingestpipeline_types.go  zz_generated.deepcopy.go
ace/services/ace-operator/controllers/: ingestpipeline_controller.go
ace/services/ace-threat-intel/: Dockerfile  go.mod
ace/services/ace-threat-intel/cmd/ace-threat-intel/: main.go
ace/services/ace-threat-intel/internal/api/: http.go
ace/services/ace-threat-intel/internal/config/: config.go
ace/services/ace-threat-intel/internal/feeds/: abusech.go  cisa_kev.go  feed.go  otx.go  taxii.go
ace/services/ace-threat-intel/internal/ioc/: cache.go
js/: api.js  bundle-26df06bbde665912c7803cd668f15047.js
scripts/: generate_financial_workbook.py  recalc.py
services/: grading-services.html  land-clearing.html  material-delivery.html
tests/: test_links.py
