[workspace]
resolver = "2"
members = [
    "services/ace-ingest",
    "services/ace-normalize",
    "services/ace-correlate",
]

[workspace.dependencies]
# Async runtime
tokio       = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7", features = ["codec", "net"] }

# Kafka
rdkafka = { version = "0.36", default-features = false, features = ["cmake-build", "tokio"] }

# Parsing (zero-copy parser combinators)
winnow = "0.6"

# HTTP / health
axum         = { version = "0.7", features = ["tokio"] }
tower        = "0.4"
tower-http   = { version = "0.5", features = ["trace", "cors"] }
hyper        = { version = "1" }

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
bytes        = "1"

# Protobuf
prost        = "0.13"
prost-types  = "0.13"

# Logging / tracing
tracing               = "0.1"
tracing-subscriber    = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.23"

# OpenTelemetry
opentelemetry                = "0.22"
opentelemetry_sdk            = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp           = { version = "0.15", features = ["grpc-tonic", "metrics"] }
opentelemetry-prometheus     = "0.15"
prometheus                   = { version = "0.13", features = ["process"] }

# Error handling
thiserror = "2"
anyhow    = "1"

# Configuration
config = "0.14"

# UUID (v7 = time-sortable)
uuid = { version = "1", features = ["v7", "serde"] }

# Compression
zstd = "0.13"

# Async trait object support
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IP / networking
ipnet = { version = "2", features = ["serde"] }

# Byte-vector serde helper (needed for payload fields)
serde_bytes = "0.11"

# Concurrent hashmap (lock-free reads for session state)
dashmap = { version = "6", features = ["serde"] }

# Ordered map (rule registry maintains insertion order)
indexmap = { version = "2", features = ["serde"] }

# Lazy/one-time initialization
once_cell = "1"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "debuginfo"
panic         = "abort"
