[package]
name    = "ace-correlate"
version = "0.1.0"
edition = "2021"
description = "ACE correlation engine — normalized events → enriched events + alerts"

[[bin]]
name = "ace-correlate"
path = "src/main.rs"

[dependencies]
# Workspace-shared
tokio              = { workspace = true }
tokio-util         = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
serde_bytes        = { workspace = true }
bytes              = { workspace = true }
prost              = { workspace = true }
prost-types        = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
config             = { workspace = true }
uuid               = { workspace = true }
async-trait        = { workspace = true }
chrono             = { workspace = true }
rdkafka            = { workspace = true }
once_cell          = { workspace = true }
dashmap            = { workspace = true }
indexmap           = { workspace = true }

# YAML rule configs (external rules files)
serde_yaml = "0.9"

# Hostname for collector_id default
hostname = "0.4"

[build-dependencies]
prost-build = "0.13"
