[package]
name    = "ace-ingest"
version = "0.1.0"
edition = "2021"
description = "ACE universal log ingestion gateway — 500k EPS per pod"

[[bin]]
name = "ace-ingest"
path = "src/main.rs"

[dependencies]
# Workspace-shared
tokio       = { workspace = true }
tokio-util  = { workspace = true }
axum        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_bytes = { workspace = true }
bytes       = { workspace = true }
prost       = { workspace = true }
prost-types = { workspace = true }
tracing               = { workspace = true }
tracing-subscriber    = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry         = { workspace = true }
opentelemetry_sdk     = { workspace = true }
opentelemetry-otlp    = { workspace = true }
prometheus            = { workspace = true }
opentelemetry-prometheus = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
config      = { workspace = true }
uuid        = { workspace = true }
zstd        = { workspace = true }
async-trait = { workspace = true }
chrono      = { workspace = true }
rdkafka     = { workspace = true }
winnow      = { workspace = true }

# Local-only
# AWS SDK (CloudTrail / SQS / S3 ingestion)
aws-config  = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.13"
aws-sdk-s3  = "1.20"

# For WEF / K8s audit HTTP receiver (shared axum, but we need multipart)
tower-http  = { workspace = true }

# Byte ring-buffer for spill-to-disk back-pressure
tempfile  = "3"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }

# Hostname
hostname = "0.4"

# CloudTrail: gzip decompression
flate2 = "1.0"

# Modbus: hex encoding of PDU data
hex = "0.4"

[build-dependencies]
prost-build = "0.13"
